getUnderLying now also uses the getEditableValue as the start persist. so it always should just set it on that